<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartPage"
    >

    <ImageView
        android:id="@+id/icon_start"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/ic_sms" />

    <TextView
        android:id="@+id/welcome1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon_start"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="82dp"
        android:fontFamily="@font/segoeui"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/welcome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome1"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/segoeui"
        android:text="@string/welcome2"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_below="@+id/welcome2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/button_start"
        android:text="@string/login"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_below="@+id/btn_login"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/btn_sign_up"
        android:text="@string/sign_up"
        android:textColor="@color/black" />
</RelativeLayout>